feat: firebase auth | shadcnui | sidepanel added

--- a/sidepanel.html
+++ b/sidepanel.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/icons/logo.ico" />
+  <link rel="icon" href="/logo/logo.ico" />
+  <meta http-equiv="Content-Security-Policy" content="default-src *;">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Foo Extension</title>
 </head>
