--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,13 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="/icon/logo.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" /><meta http-equiv="Content-Security-Policy" content="default-src *;">
+    <link rel="icon" href="/logo/logo.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Foo Extension</title>
-</head>
-
-<body>
-  <div id="app"></div>
-  <script type="module" src="/src/popup/index.tsx"></script>
-</body>
-
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/popup/index.tsx"></script>
+  </body>
 </html>
